# ProjectGreenlight

./: .gitignore  README.md  pyproject.toml  sync-obsidian.skill
data/: dedup_report.json  manifest.csv  parse_metadata.csv  scoring_report.json
data/benchmark/extracted/: APR022019_01B2203.json  APR042013_01B2203.json  APR052021_02B2203.json  APR052021_04B2203.json  APR102025_07B2203.json  APR172025_01B2203.json  APR232020_14B2203.json  APR232020_15B2203.json  APR242019_01B2203.json  APR262017_03B2203.json  APR262018_03B2203.json  APR282005_02B2203.json  APR282005_09B2203.json  APR292020_01B2203.json  APR292022_01B2203.json  APR292024_01B2203.json  AUG112005_09B2203.json  AUG122005_21B2203.json  AUG132024_01B2203.json  AUG232013_01B2203.json  AUG262005_02B2203.json  AUG292016_02B2203.json  AUG312005_12B2203.json  Apr052010_01B2203.json  Apr102006_01B2203.json  Apr202007_01B2203.json  Apr202009_02B2203.json  Apr292009_07B2203.json  Apr292009_10B2203.json  Aug012006_01B2203.json  Aug062010_02B2203.json  Aug072007_01B2203.json  Aug092012_03B2203.json  Aug132009_02B2203.json  Aug162006_03B2203.json  Aug202012_01B2203.json  Aug252009_06B2203.json  DEC022005_10B2203.json  DEC022005_12B2203.json  (+221 more)
data/metrics/: dataset_stats.json  qwen_r16.jsonl
rubric/: scoring_rubric.md
scripts/: benchmark_eval.py  benchmark_eval_local.py  compute_data_stats.py  deduplicate.py  extract_structure.py  format_training_data.py  parse_pdfs.py  parse_train_log.py  prepare_benchmark.py  queue_next_training.sh  score_quality.py  scrape_aao.py  setup_tpu.sh  train_lora.py  train_lora_xla.py
