[project]
name = "immigration-ai"
version = "0.1.0"
description = "O-1A visa intelligence system — data pipeline and fine-tuning"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "pymupdf>=1.24",
    "pytesseract>=0.3",
    "sentence-transformers>=3.0",
    "numpy>=1.26",
    "tqdm>=4.66",
]

[project.optional-dependencies]
dev = ["ruff", "pytest"]
